htmltools 0.2.9
--------------------------------------------------------------------------------

* Add check that `htmlDependency()` isn't called with an absolute path when a
  binary package is built. (#22)

* Allow HTML content to include UTF-8, Latin1, and system encoded content. All
  will be converted to UTF-8 using enc2utf8() at render time. (#21)


htmltools 0.2.7
--------------------------------------------------------------------------------

* Add "append" parameter to attachDependencies, to allow adding dependencies,
  instead of replacing them.


htmltools 0.2.6
--------------------------------------------------------------------------------

* Add "attachment" parameter to htmlDependency, which can be used to allow any
  file in the dependency directory to be available via URL at runtime.


htmltools 0.2.5
--------------------------------------------------------------------------------

* Explicit library(htmltools) is no longer required for tags to be rendered in
  knitr/rmarkdown documents.

* Added "viewer" parameter to html_print.


htmltools 0.2.4
--------------------------------------------------------------------------------

Initial release