@@ -23,6 +23,7 @@ export(br)
 export(browsable)
 export(code)
 export(copyDependencyToDir)
+export(css)
 export(div)
 export(doRenderTags)
 export(em)
